# idfpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish.yml  release-version.yml  sync-energyplus.yml  update-models.yml
benchmarks/: bench_idf.py
idfpy/: __init__.py  __main__.py  cli.py  idf.py
idfpy/codegen/: __init__.py  field_parser.py  model_generator.py  schema_parser.py  template_filters.py
idfpy/codegen/templates/: idf_model_py.jinja2  init_py.jinja2  init_pyi.jinja2  ref_meta_py.jinja2  refs_py.jinja2
idfpy/ext/: __init__.py
idfpy/ext/geometry/: __init__.py  functions.py  mixins.py
idfpy/models/: __init__.py  __init__.pyi  _base.py  _errors.py  _metadata.py  _ref_errors.py  _ref_meta.py  _refs.py  advanced_construction.py  air_distribution.py  availability_managers.py  coils.py  condensers.py  constructions.py  curves.py  daylighting.py  demand_limiting.py  economics.py  electric_load.py  ems.py  evap_coolers.py  external_interface.py  fans.py  faults.py  fluids.py  hvac_design.py  hvac_templates.py  internal_gains.py  location.py  misc.py  node_branch.py  outputs.py  plant_control.py  plant_equipment.py  pumps.py  python_plugins.py  refrigeration.py  room_air.py  schedules.py  setpoint_managers.py  (+13 more)
idfpy/sim/: __init__.py  _runner.py  config.py  result.py
tests/: test.idf  test_api_unification.py  test_epjson_doe.py  test_ext.py  test_merge_dict.py  test_metadata.py  test_models.py  test_ref_system.py  test_typing_check.py
