[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idfpy"
version = "26.1.0"
description = "Type-safe Pydantic models for all EnergyPlus IDF objects"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "ITOTI-Y" }]
keywords = [
    "energyplus", "idf", "epjson", "building-simulation",
    "pydantic", "hvac", "building-energy", "idd",
    "building-science", "type-safe", "code-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7.3",
    "typer>=0.21.1",
    "anyio>=4.13.0",
]

[project.scripts]
idfpy = "idfpy.cli:app"

[project.urls]
Repository = "https://github.com/ITOTI-Y/idfpy"
Issues = "https://github.com/ITOTI-Y/idfpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["idfpy"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
    "N",
]

ignore = [
    "E501",
    "N805",
    "N806",
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["F401", "F811"]
"idfpy/models/__init__.py" = ["RUF022"]
"idfpy/models/_refs.py" = ["RUF022"]
"idfpy/models/*.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.26",
    "jinja2>=3.1.6",
    "anyio[trio]>=4.13.0",
]
